# Workflow_executor

./: CMakeLists.txt  Workflowtest.cpp  main.cpp  workflow.cpp  workflow.h
Source/: ConfigReader.cpp  ConfigReader.h  WorkflowExecutor.cpp  WorkflowExecutor.h
Source/Blocks/: Count.cpp  Count.h  Dump.cpp  Dump.h  Factory.cpp  Factory.h  Grep.cpp  Grep.h  IWorker.cpp  IWorker.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
